# PCAD-Predictive-Cyber-Attack-Detection-

./: .gitignore  Dockerfile  PCAD_Final_Presentation.pptx  README.md  feature_engineering.py  main.py  preprocessing.py  pyproject.toml  pyrightconfig.json.old  requirements.txt  start_app.ps1
docs/: VIVA_COMMAND_CENTER.md  literature_review.md  project_proposal.md
models/: LSTM.h5  LinearModel.pkl  LogisticRegression.pkl  SVM.pkl  XGBoost.pkl  metrics.json  scaler.joblib
notebooks/: eda_analysis.ipynb
scratch/: check_imports.py  check_trees.py  generate_distribution.py  generate_report.py  test_prediction.py
src/: api.py  config.py  data_loader.py  models.py
web/: package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: ActionCenter.jsx  DataDistributionChart.jsx  ExplainabilityPanel.jsx  RealTimeCharts.jsx  TopMetricsBar.jsx
